--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Algoritmusok és adatszerkezetek gyakorlat házi feladat</h1>
+    <h2>Makszim Balázs Imre</h2>
     <a href="index.html">1. feladat</a>
 </body>
 </html>
