--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Algoritmusok és adatszerkezetek gyakorlat házi feladat</h1>
     <h2>Makszim Balázs Imre ENSGO3</h2>
-    <a href="index.html">1. feladat</a>
+    <a href="https://github.com/bmakszim/alg-01">1. feladat - Candies</a>
 </body>
 </html>
