--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
     <h1>Algoritmusok és adatszerkezetek gyakorlat házi feladat</h1>
     <h2>Makszim Balázs Imre ENSGO3</h2>
-    <a href="https://github.com/bmakszim/alg-01">1. feladat - Candies</a>
-    <a href="https://github.com/bmakszim/alg-02">2. feladat - K Factorization</a>
+    <ul>
+        <li><a href="https://github.com/bmakszim/alg-01">1. feladat - Candies</a></li>
+        <li><a href="https://github.com/bmakszim/alg-02">2. feladat - K Factorization</a></li>
+    </ul>
 </body>
 </html>
