--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="https://github.com/bmakszim/alg-01">1. feladat - Candies</a></li>
         <li><a href="https://github.com/bmakszim/alg-02">2. feladat - K Factorization</a></li>
+        <li><a href="https://github.com/bmakszim/alg-03">3. feladat - Abbreviation</a></li>
     </ul>
 </body>
 </html>
