--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li><a href="https://github.com/bmakszim/alg-01">1. feladat - Candies</a></li>
         <li><a href="https://github.com/bmakszim/alg-02">2. feladat - K Factorization</a></li>
         <li><a href="https://github.com/bmakszim/alg-03">3. feladat - Abbreviation</a></li>
+        <li><a href="https://github.com/bmakszim/alg-04">4. feladat - Road Construction</a></li>
     </ul>
 </body>
 </html>
