--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="https://github.com/bmakszim/alg-02">2. feladat - K Factorization</a></li>
         <li><a href="https://github.com/bmakszim/alg-03">3. feladat - Abbreviation</a></li>
         <li><a href="https://github.com/bmakszim/alg-04">4. feladat - Road Construction</a></li>
+        <li><a href="https://github.com/bmakszim/alg-k">K. feladat - The Next Palindrome</a></li>
     </ul>
 </body>
 </html>
